--- a/fter/BUILD.gn
+++ b/fter/BUILD.gn
@@ -1,8 +1,9 @@
 
 group("tersbox_fter") {
   deps = [
-    "heightmap:tersbox_fter_heightmap",
+    "gen_heightmap:tersbox_fter_gen_heightmap",
     "grid:tersbox_fter_grid",
+    "heightmap:tersbox_fter_heightmap",
     "base:tersbox_fter_base",
   ]
 }
