--- a/fter/BUILD.gn
+++ b/fter/BUILD.gn
@@ -1,9 +1,11 @@
 
 group("tersbox_fter") {
   deps = [
+    "base:tersbox_fter_base",
     "gen_heightmap:tersbox_fter_gen_heightmap",
     "grid:tersbox_fter_grid",
     "heightmap:tersbox_fter_heightmap",
-    "base:tersbox_fter_base",
+    "dirlight:tersbox_fter_dirlight",
+    "zbuffer:tersbox_fter_zbuffer",
   ]
 }
