--- a/fter/BUILD.gn
+++ b/fter/BUILD.gn
@@ -7,5 +7,6 @@ group("tersbox_fter") {
     "heightmap:tersbox_fter_heightmap",
     "dirlight:tersbox_fter_dirlight",
     "zbuffer:tersbox_fter_zbuffer",
+    "simpletex:tersbox_fter_simpletex",
   ]
 }
