--- a/fter/BUILD.gn
+++ b/fter/BUILD.gn
@@ -10,6 +10,7 @@ group("tersbox_fter") {
     "simpletex:tersbox_fter_simpletex",
     "detailmap:tersbox_fter_detailmap",
     "lightmap:tersbox_fter_lightmap",
-    "clod:tersbox_fter_clod",
+    "quadcull:tersbox_fter_quadcull",
+    "//azer/render_system/d3d11:d3d11_render_system",
   ]
 }
