--- a/fter/base/BUILD.gn
+++ b/fter/base/BUILD.gn
@@ -1,3 +1,18 @@
+import("//build/templates/afx.gni")
+
+afx("tersbox_fter_frustrum_effect") {
+  source = "frustrum_frame_effect.afx"
+  filename = "frustrum_frame_effect"
+}
+
+static_library("tersbox_fter_frustrum") {
+  sources = ["frustrum_frame.cc"]
+  deps = ["//azer/render:render",
+          "//azer/render_system/d3d11:d3d11_render_system",
+          ":tersbox_fter_frustrum_effect",
+          ]
+}
+
 static_library("tersbox_fter_base") {
   sources = [
     "terrain_data.cc",
@@ -9,5 +24,6 @@ static_library("tersbox_fter_base") {
           "//azer/util:azer_util",
           "//base:appinit",
           "//azer/render_system/d3d11:d3d11_render_system",
+          ":tersbox_fter_frustrum",
          ]
 }
