--- a/fter/base/BUILD.gn
+++ b/fter/base/BUILD.gn
@@ -1,15 +1,15 @@
 import("//build/templates/afx.gni")
 
-afx("tersbox_fter_frustrum_effect") {
-  source = "frustrum_frame_effect.afx"
-  filename = "frustrum_frame_effect"
+afx("tersbox_fter_frame_effect") {
+  source = "frame_effect.afx"
+  filename = "frame_effect"
 }
 
 static_library("tersbox_fter_frustrum") {
   sources = ["frustrum_frame.cc"]
   deps = ["//azer/render:render",
           "//azer/render_system/d3d11:d3d11_render_system",
-          ":tersbox_fter_frustrum_effect",
+          ":tersbox_fter_frame_effect",
           ]
 }
 
