--- a/fter/clod/BUILD.gn
+++ b/fter/clod/BUILD.gn
@@ -36,6 +36,18 @@ executable("tersbox_fter_clodgrid") {
          ]
 }
 
+executable("tersbox_fter_clod_bitmapgrid") {
+  sources = ["bitmap_grid_main.cc"]
+  deps = ["//tersbox/fter/base:tersbox_fter_base",
+          "//azer/render:render",
+          "//azer/util:azer_util",
+          "//base:appinit",
+          ":tersbox_fter_clodlib",
+          ":tersbox_fter_clod_effect",
+          ":tersbox_fter_clodgrid_effect",
+         ]
+}
+
 executable("tersbox_fter_clod") {
   sources = ["main.cc"]
   deps = ["//tersbox/fter/base:tersbox_fter_base",
