--- a/fter/clod/BUILD.gn
+++ b/fter/clod/BUILD.gn
@@ -67,6 +67,18 @@ executable("tersbox_fter_clod_levelmapgrid2") {
          ]
 }
 
+executable("tersbox_fter_clod_levelmapgrid3") {
+  sources = ["levelmap_grid_main3.cc"]
+  deps = ["//tersbox/fter/base:tersbox_fter_base",
+          "//azer/render:render",
+          "//azer/util:azer_util",
+          "//base:appinit",
+          ":tersbox_fter_clodlib",
+          ":tersbox_fter_clod_effect",
+          ":tersbox_fter_clod_dirlight_effect",
+         ]
+}
+
 executable("tersbox_fter_clod") {
   sources = ["main.cc"]
   deps = ["//tersbox/fter/base:tersbox_fter_base",
