--- a/base/BUILD.gn
+++ b/base/BUILD.gn
@@ -27,6 +27,8 @@ static_library("tersbox_base") {
   sources = [
     "camera_control.cc",
     "camera_control.h",
+    "rawdata.cc",
+    "rawdata.h",
   ]
   deps = ["//azer/render:render",
           "//azer/util:azer_util",
