--- a/roam/dirlight/BUILD.gn
+++ b/roam/dirlight/BUILD.gn
@@ -1,16 +1,16 @@
 import("//build/templates/afx.gni")
 
-afx("tersbox_roam_indices_effect") {
-  source = "diffuse.afx"
-  filename = "diffuse"
+afx("tersbox_roam_dirlight_effect") {
+  source = "dirlight.afx"
+  filename = "dirlight"
 }
 
 
-executable("tersbox_roam_indices") {
+executable("tersbox_roam_dirlight") {
   sources = ["main.cc", "roam.cc", "roam.h"]
   deps = ["//tersbox/base:tersbox_base",
           "//azer/render:render",
           "//base:appinit",
-          ":tersbox_roam_indices_effect",
+          ":tersbox_roam_dirlight_effect",
          ]
 }
