--- a/roam/BUILD.gn
+++ b/roam/BUILD.gn
@@ -5,5 +5,6 @@ group("tersbox_roam") {
     "heightmap:tersbox_roam_heightmap",
     "indices:tersbox_roam_indices",
     "dirlight:tersbox_roam_dirlight",
+    "fcull:tersbox_roam_fcull",
   ]
 }
