--- a/effect/BUILD.gn
+++ b/effect/BUILD.gn
@@ -2,5 +2,6 @@ group("tersbox_effect") {
   deps = [
     "common:tersbox_effect_common",
     "cube:tersbox_effect_cube",
+    "reflect:tersbox_effect_reflect",
   ]
 }
