--- a/effect/BUILD.gn
+++ b/effect/BUILD.gn
@@ -7,5 +7,6 @@ group("tersbox_effect") {
     "ice:tersbox_effect_ice",
     "reflect:tersbox_effect_reflect",
     "water:tersbox_effect_water",
+    "blur:tersbox_effect_blur",
   ]
 }
