--- a/effect/shadowmap/BUILD.gn
+++ b/effect/shadowmap/BUILD.gn
@@ -5,12 +5,18 @@ afx("tersbox_effect_shadowmap_effect") {
   filename = "diffuse"
 }
 
+afx("tersbox_effect_shadowmap_effect2") {
+  source = "shadowmap.afx"
+  filename = "shadowmap"
+}
+
 executable("tersbox_effect_shadowmap") {
-  sources = ["main.cc"]
+  sources = ["main.cc", "shadowmap.cc"]
   deps = ["//tersbox/base:tersbox_base",
           "//tersbox/effect/common:tersbox_effect_common",
           "//azer/render:render",
           "//base:appinit",
           ":tersbox_effect_shadowmap_effect",
+          ":tersbox_effect_shadowmap_effect2",
          ]
 }
