--- a/effect/BUILD.gn
+++ b/effect/BUILD.gn
@@ -10,5 +10,6 @@ group("tersbox_effect") {
     "blur:tersbox_effect_blur",
     "shadowmap:tersbox_effect_shadowmap",
     "multilight_shadowmap:tersbox_effect_multilight_shadowmap",
+    "projectlight:tersbox_effect_projectlight",
   ]
 }
