--- a/BUILD.gn
+++ b/BUILD.gn
@@ -5,5 +5,6 @@ group("tersbox") {
     "clod:tersbox_clod",
     "roam:tersbox_roam",
     "effect:tersbox_effect",
+    "tertur:tersbox_tertur",
   ]
 }
