--- a/tertur/skydomes/BUILD.gn
+++ b/tertur/skydomes/BUILD.gn
@@ -5,12 +5,18 @@ afx("tersbox_tertur_skydomes_effect") {
   filename = "diffuse"
 }
 
+afx("tersbox_tertur_skydomes_effect2") {
+  source = "skydomes.afx"
+  filename = "skydomes"
+}
+
 executable("tersbox_tertur_skydomes") {
-  sources = ["main.cc"]
+  sources = ["main.cc", "skydomes.cc"]
   deps = ["//tersbox/base:tersbox_base",
           "//tersbox/effect/common:tersbox_effect_common",
           "//azer/render:render",
           "//base:appinit",
           ":tersbox_tertur_skydomes_effect",
+          ":tersbox_tertur_skydomes_effect2",
          ]
 }
