--- a/tertur/BUILD.gn
+++ b/tertur/BUILD.gn
@@ -4,6 +4,7 @@ group("tersbox_tertur") {
   deps = [
     "grid:tersbox_tertur_grid",
     "heightmap:tersbox_tertur_heightmap",
+    "terlight:tersbox_tertur_terlight",
     "skydomes:tersbox_tertur_skydomes",
     "bitmapclouds:tersbox_tertur_bitmapclouds",
   ]
