--- a/tertur/BUILD.gn
+++ b/tertur/BUILD.gn
@@ -6,6 +6,7 @@ group("tersbox_tertur") {
     "heightmap:tersbox_tertur_heightmap",
     "terlight:tersbox_tertur_terlight",
     "texture:tersbox_tertur_texture",
+    "quadtree:tersbox_tertur_quadtree",
     "skydomes:tersbox_tertur_skydomes",
     "bitmapclouds:tersbox_tertur_bitmapclouds",
   ]
