--- a/tertur/BUILD.gn
+++ b/tertur/BUILD.gn
@@ -7,6 +7,7 @@ group("tersbox_tertur") {
     "terlight:tersbox_tertur_terlight",
     "texture:tersbox_tertur_texture",
     "quadtree:tersbox_tertur_quadtree",
+    "move:tersbox_tertur_move",
     "skydomes:tersbox_tertur_skydomes",
     "bitmapclouds:tersbox_tertur_bitmapclouds",
   ]
