--- a/tertur/water/BUILD.gn
+++ b/tertur/water/BUILD.gn
@@ -25,6 +25,7 @@ executable("tersbox_tertur_water") {
   deps = ["//azer/render:render",
           "//azer/util:azer_util",
           "//tersbox/base:tersbox_base",
+          "//tersbox/effect/common:tersbox_effect_common",
           "//base:appinit",
           ":tersbox_tertur_water_effect",
           ":tersbox_tertur_water_effect2",
